<resources>
    <string name="app_name">TiketSayaApp</string>
    <string name="sloganapp">Wisata Jadi Lebih Asik</string>
    <string name="signin">Sign In</string>
    <string name="new_account">New Account</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email Address</string>
    <string name="continue_label">CONTINUE</string>
    <string name="name_label">Nama</string>
    <string name="bio_label">Your Passion?</string>
    <string name="explore_now_label">Explore Now</string>
    <string name="about_pisa">The leaning of the Tower of Pisa comse ino the story in 1773.</string>
</resources>
